--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,8 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  /*added text center*/
+  text:center;
 }
 
 .past {
